# TITANIC

./: README.md  titanic-competition-w-tensorflow-decision-forests.ipynb
.claude/: settings.local.json
.kiro/specs/enterprise-ml-infrastructure/: design.md  requirements.md  tasks.md
titanic-pro-catboost/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_COMPLETE.md  README.md  pyproject.toml
titanic-pro-catboost/.github/workflows/: ci.yml
titanic-pro-catboost/configs/: config.yaml  features.yaml  train.yaml
titanic-pro-catboost/src/: __init__.py
titanic-pro-catboost/src/core/: contracts.py  utils.py
titanic-pro-catboost/src/features/: build.py  target_encoding.py
titanic-pro-catboost/src/modeling/: __init__.py  ablate.py  cat_model.py  infer.py  train_cv.py
titanic-pro-catboost/src/reporting/: __init__.py  final_summary.py  model_card.py  shap_explain.py
titanic-pro-catboost/src/stacking/: __init__.py  build_oof_matrix.py  meta_blend.py
titanic-pro-catboost/src/validation/: __init__.py  adv_validation.py  calibration.py  family_wall_check.py  permutation_impact.py  shuffled_target_check.py  slice_metrics.py
titanic-pro-catboost/tests/: conftest.py  test_adv_validation.py  test_calibration.py  test_family_wall.py  test_features.py  test_integration.py  test_modeling.py  test_oof_no_leakage.py  test_shuffled_target.py
titanic_tfdf/: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ADVANCED_TITANIC_SUMMARY.md  Makefile  README.md  pyproject.toml  requirements.txt  test_advanced_pipeline.py
titanic_tfdf/configs/: config.yaml
titanic_tfdf/configs/data/: titanic.yaml
titanic_tfdf/configs/experiment/: baseline.yaml
titanic_tfdf/configs/model/: tfdf.yaml
titanic_tfdf/data/: test.csv
titanic_tfdf/scripts/: setup_env.ps1  setup_env.sh  validate_setup.py
titanic_tfdf/src/: catboost_model.py  datasets.py  eda_analysis.py  features.py  infer.py  master_pipeline.py  train.py
titanic_tfdf/src/titanic_enterprise/: __init__.py  cli.py
titanic_tfdf/src/titanic_enterprise/data/: __init__.py
titanic_tfdf/src/titanic_enterprise/features/: __init__.py
titanic_tfdf/src/titanic_enterprise/inference/: __init__.py
titanic_tfdf/src/titanic_enterprise/training/: __init__.py
titanic_tfdf/src/titanic_enterprise/utils/: __init__.py  config.py  constants.py  exceptions.py  file_utils.py  logging.py  mlflow_utils.py  validation.py
titanic_tfdf/tests/: conftest.py  test_features.py
titanic_tfdf/tests/unit/: test_base_model.py  test_config.py
